@@ -2,26 +2,20 @@ package managers;
 
 import tasks.*;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.io.IOException;
-import java.io.FileWriter;
-import java.io.Writer;
-import java.io.FileReader;
-import java.io.Reader;
-import java.io.BufferedReader;
-import java.io.File;
-import java.util.List;
+import java.io.*;
 import java.time.Duration;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
 
 
-public class FileBackedTaskManager extends InMemoryTaskManager  {
+public class FileBackedTaskManager extends InMemoryTaskManager {
 
     File dbTaskManager;
 
     public FileBackedTaskManager(File dbTaskManager) {
-        this. dbTaskManager = dbTaskManager;
+        this.dbTaskManager = dbTaskManager;
     }
 
     public static FileBackedTaskManager loadFromFile(File file) {
@@ -37,13 +31,16 @@ public class FileBackedTaskManager extends InMemoryTaskManager  {
             }
             reader.close();
         } catch (IOException e) {
-            e.printStackTrace();
+            System.out.println("Ошибка чтения.");
         }
 
-        tasksList.remove(0);
+        tasksList.removeFirst();
 
         int lastIdFromFile = 0;
         int lastEpicIdFromFile = 0;
+        List<Task> tasksListFormFile = new ArrayList<>();
+        List<SubTask> subTasksListFormFile = new ArrayList<>();
+        List<Epic> epicsListFormFile = new ArrayList<>();
 
         for (String str : tasksList) {
             String[] split = str.split(",");
@@ -52,38 +49,36 @@ public class FileBackedTaskManager extends InMemoryTaskManager  {
             }
             if (split[1].equals("EPIC") && Integer.parseInt(split[0]) >= lastEpicIdFromFile) {
                 lastEpicIdFromFile = Integer.parseInt(split[0]);
+                epicsListFormFile.add((Epic) fileBackedTaskManagerFromFile.fromString(str));
             }
             if (split[1].equals("TASK")) {
-                fileBackedTaskManagerFromFile.addTask(fileBackedTaskManagerFromFile.fromString(str));
+                tasksListFormFile.add(fileBackedTaskManagerFromFile.fromString(str));
             }
 
             if (split[1].equals("SUBTASK")) {
-                fileBackedTaskManagerFromFile.addSubTask((SubTask) fileBackedTaskManagerFromFile.fromString(str));
+                subTasksListFormFile.add((SubTask) fileBackedTaskManagerFromFile.fromString(str));
             }
         }
 
         fileBackedTaskManagerFromFile.setId(lastIdFromFile);
         fileBackedTaskManagerFromFile.setLastEpicId(lastEpicIdFromFile);
-        for (String str : tasksList) {
-            String[] split = str.split(",");
-            if (split[1].equals("EPIC")) {
-                ArrayList<Integer> idSubtasklistFromFile = new ArrayList<>();
-                for (SubTask subTask: fileBackedTaskManagerFromFile.getSubtasks()) {
-                    if (subTask.getEpicId() == Integer.parseInt(split[0])) {
-                        idSubtasklistFromFile.add(subTask.getId());
-                    }
-                }
-                Epic epic = (Epic)fileBackedTaskManagerFromFile.fromString(str);
-                epic.setSubTaskListId(idSubtasklistFromFile);
-                fileBackedTaskManagerFromFile.addEpic(epic);
-            }
+
+
+        for (Task task : tasksListFormFile) {
+            fileBackedTaskManagerFromFile.addTask(task);
+        }
+        for (Epic epic : epicsListFormFile) {
+            fileBackedTaskManagerFromFile.addEpic(epic);
+        }
+        for (SubTask subTask : subTasksListFormFile) {
+            fileBackedTaskManagerFromFile.addSubTask(subTask);
         }
 
         return fileBackedTaskManagerFromFile;
     }
 
 
-    public void save() {
+    public void save() throws IOException {
         Writer fileWriter = null;
         try {
             fileWriter = new FileWriter(dbTaskManager);
@@ -110,71 +105,45 @@ public class FileBackedTaskManager extends InMemoryTaskManager  {
             }
 
         } catch (IOException e) {
-            e.printStackTrace();
+            System.out.println("Ошибка записи");
         } finally {
-            try {
-                fileWriter.close();
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            } catch (NullPointerException exp) {
-                System.out.println("Ошибка: передан неинициализированный объект!");
-            }
+            assert fileWriter != null;
+            fileWriter.close();
         }
-
     }
 
     public void reader() {
 
-        Reader fileReader = null;
-        try {
-            fileReader = new FileReader(dbTaskManager);
+        try (Reader fileReader = new FileReader(dbTaskManager)) {
 
             int data = fileReader.read();
             while (data != -1) {
                 System.out.print((char) data);
                 data = fileReader.read();
             }
-
-            fileReader.close();
         } catch (IOException e) {
-            e.printStackTrace();
-        } finally {
-            try {
-                fileReader.close();
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            } catch (NullPointerException exp) {
-                System.out.println("Ошибка: передан неинициализированный объект!");
-            }
+            throw new RuntimeException(e);
         }
     }
 
     private String toString(Task task) {
-        String strTask = task.getId() + "," + task.getType() + "," + task.getTitle() + "," + task.getStatusTask().name() + ","
+        return task.getId() + "," + task.getType() + "," + task.getTitle() + "," + task.getStatusTask().name() + ","
                 + task.getDescription() + "," + task.getEpicId() + "," + task.getStartTime() + "," + task.getDuration() + ","
                 + task.getEndTime() + "\n";
-        return strTask;
     }
 
     private Task fromString(String value) {
         String[] split = value.split(",");
-        Task taskFromString;
-        switch (TaskTypes.valueOf(split[1])) {
-            case TASK:
-                return taskFromString = new Task(split[2], split[4], Integer.parseInt(split[0]), TaskStatus.valueOf(split[3]),
-                        LocalDateTime.parse(split[6]), Duration.parse(split[7]));
-
-            case EPIC:
-                return taskFromString = new Epic(split[2], split[4], Integer.parseInt(split[0]), TaskStatus.valueOf(split[3]),
-                        LocalDateTime.parse(split[6]), Duration.parse(split[7]),
-                        new ArrayList<Integer>(), LocalDateTime.parse(split[8]));
-
-            case SUBTASK:
-                return taskFromString = new SubTask(split[2], split[4], Integer.parseInt(split[0]), TaskStatus.valueOf(split[3]),
-                        LocalDateTime.parse(split[6]), Duration.parse(split[7]),
-                        Integer.parseInt(split[5]));
-        }
-        return null;
+        return switch (TaskTypes.valueOf(split[1])) {
+            case TASK -> new Task(split[2], split[4], Integer.parseInt(split[0]), TaskStatus.valueOf(split[3]),
+                    LocalDateTime.parse(split[6]), Duration.parse(split[7]));
+            case EPIC -> new Epic(split[2], split[4], Integer.parseInt(split[0]), TaskStatus.valueOf(split[3]),
+                    LocalDateTime.parse(split[6]), Duration.parse(split[7]),
+                    new ArrayList<>(), LocalDateTime.parse(split[8]));
+            case SUBTASK -> new SubTask(split[2], split[4], Integer.parseInt(split[0]), TaskStatus.valueOf(split[3]),
+                    LocalDateTime.parse(split[6]), Duration.parse(split[7]),
+                    Integer.parseInt(split[5]));
+        };
     }
 
 
@@ -212,46 +181,58 @@ public class FileBackedTaskManager extends InMemoryTaskManager  {
     @Override
     public Task addTask(Task newSingleTask) {
         Task task = super.addTask(newSingleTask);
-        save();
+        try {
+            save();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
         return task;
     }
 
     @Override
     public Epic addEpic(Epic newEpic) {
         Epic epic = super.addEpic(newEpic);
-        save();
+        try {
+            save();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
         return epic;
     }
 
     @Override
     public SubTask addSubTask(SubTask newSubTask) {
         SubTask subtask = super.addSubTask(newSubTask);
-        save();
+        try {
+            save();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
         return subtask;
     }
 
     @Override
-    public Task updateTask(String id, Integer status) {
+    public Task updateTask(int id, Integer status) {
         return super.updateTask(id, status);
     }
 
     @Override
-    public SubTask updateSubTask(String id, Integer status) {
+    public SubTask updateSubTask(int id, Integer status) {
         return super.updateSubTask(id, status);
     }
 
     @Override
-    public HashMap<Integer, Task> deleteTaskById(String id) {
+    public HashMap<Integer, Task> deleteTaskById(int id) {
         return super.deleteTaskById(id);
     }
 
     @Override
-    public HashMap<Integer, Epic> deleteEpicById(String id) {
+    public HashMap<Integer, Epic> deleteEpicById(int id) {
         return super.deleteEpicById(id);
     }
 
     @Override
-    public HashMap<Integer, SubTask> deleteSubTaskById(String id) {
+    public HashMap<Integer, SubTask> deleteSubTaskById(int id) {
         return super.deleteSubTaskById(id);
     }
 
